--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@
 
   /* layout */
   --max-width: 1200px;
-  --nav-height: 80px;
+  --nav-height: 120px;
 
   /* buttons */
   --button-border-radius: 8px;
